syntax = "proto3";

package org.opencb.cellbase.grpc;
option java_outer_classname = "RegulatoryServiceModel";

import "GenericService.proto";
import "regulatory.proto";

service RegulatoryService {

    rpc count(Request) returns (LongResponse) {}

    rpc distinct(Request) returns (StringArrayResponse) {}

    rpc first(Request) returns (Regulatory) {}

    rpc next(Request) returns (Regulatory) {}

    rpc get(Request) returns (stream Regulatory) {}

    rpc getJson(Request) returns (stream StringResponse) {}

    rpc groupBy(Request) returns (GroupResponse) {}
}
