syntax = "proto3";

package org.opencb.cellbase.grpc;
option java_outer_classname = "RegulatoryModel";

message Regulatory {
    string id = 1;
    string chromosome = 2;
    string source = 3;
    string feature_type = 4;
    int32 start = 5;
    int32 end = 6;
    string score = 7;
    string strand = 8;
    string frame = 9;
    string item_r_g_b = 10;
    string name = 11;
    string feature_class = 12;
    string alias = 13;
    repeated string cell_types = 14;
    string matrix = 15;
}
